--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+html {
+  height: 100%;
+  width: 100%;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,9 +10,26 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  height: 100%;
+  width: 100%;
+  padding: 1rem;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+#root {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  padding: 1rem;
+  background: rgb(2, 0, 36);
+  background: linear-gradient(
+    201deg,
+    rgba(2, 0, 36, 1) 0%,
+    rgba(79, 79, 87, 1) 35%
+  );
 }
